# equitx-project

./: .env.example  .env.mainnet  .env.testnet  .gitignore  Cargo.toml  Dockerfile  README.md  astro.config.mjs  catchup-mercury.sh  create-test-data.sh  deploy-testnet.sh  deploy-testnetv2.sh  environments.toml  fly.main.toml  fly.toml  jest.config.js  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: dependabot.yml  deploy.yml  fly.yml  rust.yml
__mocks__/: constantsMock.ts
contracts/data-feed/: Cargo.toml
contracts/data-feed/src/: data_feed.rs  lib.rs  reflector.rs  sep40.rs  test.rs
contracts/xasset/: Cargo.toml
contracts/xasset-orchestrator/: Cargo.toml  README.md
contracts/xasset-orchestrator/src/: error.rs  lib.rs  liquidity_pool.rs  metadata.rs  orchestrator.rs  storage.rs  test.rs  token.rs  version.rs
contracts/xasset-orchestrator/src/registry/: contract.rs  wasm.rs
contracts/xasset/src/: collateralized.rs  contract.rs  error.rs  index_types.rs  lib.rs  persistent_map.rs  persistent_map_ext.rs  stability_pool.rs  storage.rs  test.rs  token.rs
scripts/: catchup-mercury.sh  create-test-data.sh  delete_declared_asset.sql  deploy-mainnet.sh  deploy-mercury.sh  existing_contracts.production.txt  existing_contracts.txt  redeploy-contracts.sh  update-mainnet.sh  update-testnet.sh
server/: .env.example  Dockerfile  README.md  index.ts  package-lock.json  package.json  schema.sql  tsconfig.json  types.d.ts
server/config/: ormconfig.ts
server/controllers/: assetController.ts  cdpController.ts  liquidityPoolController.ts  pricefeedController.ts  singletonController.ts  stakerController.ts
server/entity/: Asset.ts  CDP.ts  LastQueriedTimestamp.ts  LiquidityPool.ts  Pricefeed.ts  Singleton.ts  Staker.ts
server/migration/: 1737663811427-InitialSchema.ts  1737669933582-InitialSchema.ts  1737751423521-InitialSchema.ts  1738007856160-InitialSchema.ts  1738078212746-UpdateAssetPrice.ts  1738084683191-PriceType.ts  1738096190640-InitialSchema.ts  1738100007459-LastQueriedTimestamp.ts  1738366475486-CDPLender.ts  1738615923955-xlmPrice.ts  1738860872806-InitialSchema.ts  1739289022447-Analytics.ts  1739401544661-TotalStaked.ts  1739555049465-StakedMetrics.ts  1739918069049-ProtocolGrowthTypes.ts  1740157733421-CollateralRatio.ts  1740771955772-Interest.ts  1741199755024-timestamps.ts  1742416892520-queriedTimestampEnum.ts  1742417380865-AssetContract.ts  1742926120231-AssetPoolAddress.ts  1742931545728-AssetPoolAddressDown.ts  1745268105339-mercury_wasm.ts  1753823075381-event-indexer.ts  1753885646965-index-events.ts  1753898238447-remove-hash.ts
server/routes/: assetRoutes.ts  cdpRoutes.ts  liquidityPoolRoutes.ts  pricefeedRoutes.ts  singletonRoutes.ts  stakerRoutes.ts
server/scripts/: updateCDPs.ts
server/services/: assetService.ts  cdpService.ts  liquidityPoolService.ts  pricefeedService.ts  singletonService.ts  stakerService.ts
server/src/: index.ts  ormconfig.ts
server/utils/: serverContractHelpers.ts
src/: constants.ts  env.d.ts  wallet.ts
src/contexts/: ContractMappingContext.tsx  ThemeContext.tsx
src/contracts/: contractConfig.ts  util.ts
src/layouts/: Layout.astro
src/mocks/: README.md  enable.ts  handlers.ts
src/pages/: index.astro
src/react/: index.tsx
src/styles/: global.css  styles copy.css  styles.css  theme copy.ts  theme.ts
src/utils/: adminService.ts  apiClient.ts  contractHelpers.ts  formatters.ts  mercury.ts  sacContractHelper.ts
subquery/equitx-stability-pool-indexer/: .env.develop  (+4 more)
supabase/: config.toml  seed.sql
(+146 files in other folders)
