[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
loam-sdk = { path = "../loam/crates/loam-sdk" }
loam-subcontract-core = { path = "../loam/crates/loam-subcontract-core" }
loam-subcontract-ft = { path = "../loam/crates/loam-subcontract-ft" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true