[package]
name = "data-feed"
description = "Feed of data from an Oracle"
version = "0.0.0"
authors = ["The Aha Company <help@theaha.co>"]
license = "Apache-2.0"
edition = "2021"
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
loam-sdk = { workspace = true, features = ["loam-soroban-sdk"] }
loam-subcontract-core = { workspace = true }


[dev-dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-testutils"] }

[package.metadata.stellar]
contract = true
cargo_inherit = true