[package]
name = "xasset-orchestrator"
description = "Manages and deploys xasset contracts. Based on loam-registry."
version = "0.1.0"
authors = ["Willem Wyndham <willem@ahalabs.dev>", "Pam Selle <pam@ahalabs.dev"]
license = "Apache-2.0"
rust-version = "1.69"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
loam-sdk = { workspace = true }
loam-subcontract-core = { workspace = true }
xasset = { path = "../xasset" }


[dev_dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-testutils"] }
assert_matches = "1.5.0"

[package.metadata.loam]
contract = true
