[package]
name = "orchestrator"
version = "0.0.0"
authors = ["Aha Labs <help@ahalabs.dev>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
loam-sdk = { workspace = true, features = ["loam-soroban-sdk"] }
loam-subcontract-core = { workspace = true }
data-feed = { path = "../data-feed" }
xasset = { path = "../xasset" }

[package.metadata.loam]
contract = true
