[package]
name = "orchestrator"
version = "0.0.0"
authors = ["Aha Labs <help@ahalabs.dev>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
xasset = { path = "../xasset" }

[package.metadata.stellar]
contract = true
