[package]
name = "xasset"
description = "Fungible Token that wraps another asset, creates a stability pool for it, and allows creating Collateralized Debt Positions (CDPs) against it."
version = "1.0.0"
authors = ["The Aha Company <help@theaha.co>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
loam-sdk = { workspace = true, features = ["loam-soroban-sdk"] }
loam-subcontract-core = { workspace = true }
loam-subcontract-ft = { workspace = true }
data-feed = { path = "../data-feed" }

[dev-dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-testutils"] }

[package.metadata.stellar]
contract = true